# awesome-os-setup

./: .chezmoiignore  .env.example  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dev Tricks.md  Free-windows-key.md  GPU-PPTI-SSH-SU.md  LICENSE  Makefile  PPTI FTP Download-Upload.md  PPTI File Access.md  PPTI-SSH-SU.md  Pycharm_WSL_Anaconda.md  README.md  SSH-PPTI-SU  SSH-PPTI-SU.md  awwl.tree  cuda_pytorch_install.md  deploy.yml  dev_trics_(python_notebook_IDE).md  dot_zshrc  index.html  index.md  install.sh  install_conda_windows  install_conda_windows.md  install_unix.sh  install_windows.ps1  instance.tree  main.py  mkdocs.yml  objects.inv  properdocs.yml  pyproject.toml  requirements.txt  (+8 more)
.chezmoidata/: packages.yaml
.github/: WORKFLOW_STANDARDS.md  dependabot.yml  pull_request_template.md  release.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/cleanup-artifacts/: action.yml
.github/actions/gh-pages/: config.json
.github/actions/install-python-deps/: action.yml
.github/workflows/: _base-job.yaml  build-docs.yml  build-package.yaml  ci.yml  deploy-docs.yaml  deploy.yml  dev-release.yml  main-release.yml  pipeline.yaml  pre-commit.yaml  pre-commit.yml  publish-wheel.yaml  quality-and-tests.yml  test-macOS.yaml  tests.yaml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
Dev Workflow/: cuda_pytorch_install.md
Dev workflow/: Pycharm_WSL_Anaconda.md
Linux-MacOS/: README.md  test.sh
Linux-MacOS/requirements/: conda-env-cpu.yaml  conda-env-gpu.yaml  requirements-cuda.txt
SorbonnePPTI/: 1-Terminal-GPU.md  1-Terminal-PPTI-GPUs.md  2-Pycharm-GPU.md  3-FileZilla-GPU.md  PPTI-SSH-SU.md  Terminal-PPTI-GPUs.md
Unix/: README.md
Unix/requirements/: requirements-cpu.txt
Writerside/: README.md  awl.tree  c.list  docs_instance.tree  instance.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: README.md
Writerside/topics/unix_workflow/: 0_unix_workflow_README.md  1_cuda_pytorch_install.md  unix_workflow_README.md
Writerside/topics/windows_workflow/: 0_windows_workflow_README.md  README.md  config.yaml  windows_workflow_README.md
Writerside/unix_workflow/: 1_cuda_pytorch_install.md  README_unix.md
Writerside/windows_workflow/: REAdme.md  browser_extensions.md
cfg/: buildprofiles.xml
dev workflow/: Pycharm_WSL_Anaconda.md
docs/: AIOSTREAMS_config.json  README.md  aiostreams-config.json  apps_configuration_and_shorcuts.md  awesome_websites.md  awesome_websites_browser_extensions.md  browser_extensions.md  docker.md  docs_instance.tree  shortcuts_and_apps_setup.md  tv_setup.md  v.list  writerside.cfg
docs/android-tv/: readme.md
docs/android-tv/readme/: index.html
docs/apps/: apps_configuration_and_shorcuts.md
docs/apps/apps_configuration_and_shorcuts/: index.html
docs/apps/awesome_websites_browser_extensions/: index.html
docs/apps_configuration_and_shorcuts/: index.html
docs/awesome_websites_browser_extensions/: index.html
docs/cfg/: buildprofiles.xml
docs/examples/: index.html
docs/examples/SUMMARY/: index.html
docs/examples/example/: index.html
docs/home-assistant/: freebox_auth.py  readme.md
docs/home-assistant/readme/: index.html
docs/home-server/: music_server.md  readme.md  sync_adguard_home_ip_mac.py
docs/home-server/music_server/: index.html
docs/home-server/readme/: index.html
docs/linux/: CachyOS.md  README.md  index.html
docs/macos/: .aerospace.toml  .p10k.zsh  .zshrc  Raycast 2025-09-11 10.54.27.rayconfig  iTerm2 settings.itermexport  macos  youtube_enhancer_macbook_pro.json
docs/macos/zed/: settings.json
docs/macos_darwin/: README.md  index.html
docs/unix_workflow/: .zshrc  2_pycharm_wsl_conda.md  README_unix.md  auto_linux_setup.sh  cuda  cuda_pytorch_install.md  setup_linux.sh
docs/unix_workflow/dotfiles/: .zshrc
docs/unix_workflow/package_example/:  .pre-commit-config.yaml  one_click_installer.sh  ruff.toml
docs/windows_workflow/: README.md  README_windows.md  browser_extensions.md  config.yaml  index.html  install_windows_apps.bat  install_windows_apps.sh  settings.json  setup_windows.ps1  shortcuts_and_apps_setup.md
docs/windows_workflow/dot.obsidian/: community-plugins.json  hotkeys.json  readme.txt
docs/windows_workflow/rainmeter/: readme.txt
docs/windows_workflow/win_dotfiles/: DisplayFusion Backup.reg
dotfiles/: dot_zshrc  run_onchange_1_setup_linux.sh.tmpl  run_onchange_1_setup_macos.sh.tmpl  run_onchange_2_apps.sh.tmpl  run_onchange_3_zsh.sh.tmpl
dotfiles/.chezmoidata/: packages.yaml
makefiles/: build.mk  check_format.mk  ci.mk  clean.mk  common.mk  dev.mk  install.mk  run.mk  test.mk
package/SUMMARY/: index.html
package/awesome_os/detect_os/: index.html
package/awesome_os/env_settings/: index.html
package/awesome_os/settings/: index.html
rainmeter/: readme.txt
rainmeter/@Backup/: Rainmeter.ini
scripts/: emoji_commit_parser.py  gen_doc_stubs.py  gen_example_pages.py
search/: search_index.json
src/awesome_os/: __init__.py  __main__.py  cli.py  detect_os.py  env_settings.py  os_detect.py  packages.py  settings.py  ui.py
src/awesome_os/config/: packages.yaml
src/awesome_os/frontend/: __init__.py  app.py  controller.py  dialogs.py  main.py  runner.py
src/awesome_os/installers/: base.py  factory.py  ubuntu_apt.py
src/awesome_os/tasks/: commands.py  factory.py  sudo.py  (+1 more)
src/personal_os_setup/: __init__.py  detect_os.py  settings.py
tests/: test_1.py  test_chezmoi.py  test_detect_os.py  test_managers.py  test_settings.py  test_task.py
tests/archlinux/: Dockerfile  README.md  index.html  run.sh
tests/integration/: test_cachyos_tasks.py  test_macos_tasks.py  test_ubuntu_tasks.py
unix/: README.md  auto_linux_setup.sh  cuda_pytorch_install.md
unix_workflow/: .zshrc  0_linux_setup.md  1_cuda_pytorch_install.md  2_pycharm_wsl_conda.md  3_more.md  README.md  auto_linux_setup.sh  readme.md
windows_workflow/: README.md  README_windows.md  browser_extensions.md  config.yaml
wsl/: linux_terminal_custom.sh
(+193 files in other folders)
